--- a/stylesheets/main-index.css
+++ b/stylesheets/main-index.css
@@ -8,12 +8,13 @@
 
 .index-pic {
 	border-radius: 50%;
-	height: 350px;
+
 	width: 350px;
 	border: 5px solid #0D0130;
 	text-align: left;
 	display: inline-block;
-	margin-left: 80px
+	float: left;
+
 }
 
 .index-main {
@@ -22,6 +23,10 @@
 	display: block;
 	text-align: center;
 	display: inline-block;
-	margin-left: 200px;
+	float: right;
 	vertical-align: top;
+}
+
+footer {
+	clear: both;
 }
