--- a/stylesheets/main-index.css
+++ b/stylesheets/main-index.css
@@ -4,29 +4,33 @@
 	margin-bottom: 200px;
 	margin-left: auto;
 	margin-right: auto;
+	text-align: center;
+
 	}
 
 .index-pic {
 	border-radius: 50%;
+	border: 5px solid black;
+	width: 400px;
+	height: 400px;
+	margin: 0 auto 0 auto;
 
-	width: 350px;
-	border: 5px solid #0D0130;
-	text-align: left;
-	display: inline-block;
-	float: left;
 
 }
 
 .index-main {
-	position: relative;
-	width: 800px;
 	display: block;
-	text-align: center;
-	display: inline-block;
-	float: right;
-	vertical-align: top;
+	width: 70%;
+	margin: 0 auto 0 auto;
+	
+
 }
 
 footer {
 	clear: both;
+
+}
+
+.prof-pic {
+	margin: 0 auto 0 auto;
 }
