--- a/_includes/head.html
+++ b/_includes/head.html
@@ -5,7 +5,10 @@
 
   <title>{% if page.title %}{{ page.title | escape }}{% else %}{{ site.title | escape }}{% endif %}</title>
   <meta name="description" content="{{ page.excerpt | default: site.description | strip_html | normalize_whitespace | truncate: 160 | escape }}">
+  <!-- Google Fonts -->
+  <link href="https://fonts.googleapis.com/css?family=Roboto|Ubuntu" rel="stylesheet">
 
+  <!-- Favicon -->
   <link rel="shortcut icon" type="image/x-icon" href="/assets/favicon.ico?">
 
   <link rel="stylesheet" href="{{ "/assets/main.css" | relative_url }}">
